Add samples/prime-factors.s